Configure authentication and keyring services

--- a/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
@@ -1,7 +1,5 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
-# Disable effects for Albert launcher.
-windowrulev2 = noblur,class:(albert)
-windowrulev2 = noborder,class:(albert)
-windowrulev2 = noshadow,class:(albert)
-windowrulev2 = noanim,class:(albert)
+# Specific tweaks for Albert launcher.
+windowrulev2 = move 40.7% 30%,class:(albert) # Position
+windowrulev2 = stayfocused,class:(albert) # Focus
