--- a/hyprland/.config/hypr/hyprland.conf.d/00_env.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/00_env.conf
@@ -37,4 +37,8 @@ env = __VK_LAYER_NV_optimus,NVIDIA_only
 env = NVD_BACKEND,direct
 
 # Screnshots directory
-env = XDG_SCREENSHOTS_DIR,~/Obrázky/Snímky\ obrazovky/
+env = XDG_SCREENSHOTS_DIR, ~/Obrázky/Snímky\ obrazovky/
+
+# Authentication and keyring
+env = GNOME_KEYRING_CONTROL, /run/user/1000/keyring
+env = SSH_AUTH_SOCK, /run/user/1000/keyring/ssh
