Start Telegram and set cursor theme

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 # Run the autostart script.
 exec-once = ~/.config/hypr/autostart.sh
 
-# Source all configurations files.
+# Source all configuration files.
 source = ~/.config/hypr/hyprland.conf.d/*
