Config improvements and script for connecting to VPN

--- a/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
@@ -20,6 +20,7 @@ bind = ALT, space, exec, albert toggle
 # Take screenshot
 bind = $mainMod SHIFT, S, exec, grimblast copysave area
 bind = ALT, PRINT, exec, grimblast copysave active
+bind = $mainMod, PRINT, exec, grimblast copysave output
 
 # Alt-Tab
 bind = ALT, tab, focuscurrentorlast
