--- a/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
@@ -1,5 +1,17 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 # Specific tweaks for Albert launcher.
-windowrulev2 = move 40.7% 30%,class:(albert) # Position
-windowrulev2 = stayfocused,class:(albert) # Focus
+windowrulev2 = move 40.7% 30%, class:(albert) # Position
+windowrulev2 = stayfocused, class:(albert) # Focus
+
+# JetBrains fix
+windowrulev2 = float, class:^(jetbrains-.*), title:^(win.*)
+windowrulev2 = noinitialfocus, class:^(jetbrains-.*)
+
+# Floating windows
+windowrulev2 = float, class:(Electron)
+windowrulev2 = float, class:(telegram)
+windowrulev2 = float, class:(org.gnome.Calendar)
+
+# Pinned windows
+windowrulev2 = pin, class:(telegram)
