Update Hyprland config

--- a/hyprland/.config/hypr/hyprland.conf.d/05_input.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/05_input.conf
@@ -4,3 +4,8 @@ input {
     kb_layout = cz
     numlock_by_default = 1
 }
+
+cursor {
+    # Automatically disable hardware cursor on NVIDIA cards.
+    no_hardware_cursors = 2
+}
