--- a/hyprland/.config/hypr/hyprland.conf.d/00_env.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/00_env.conf
@@ -25,13 +25,13 @@ env = __NV_PRIME_RENDER_OFFLOAD,1
 # Controls if G-Sync capable monitors should use Variable Refresh Rate (VRR)
 # See Nvidia Documentation for details.
 # (https://download.nvidia.com/XFree86/Linux-32bit-ARM/375.26/README/openglenvvariables.html)
-env = __GL_GSYNC_ALLOWED,1
+#env = __GL_GSYNC_ALLOWED,1
 
 # Controls if Adaptive Sync should be used. Recommended to set as “0” to avoid
 # having problems on some games.
-env = __GL_VRR_ALLOWED,1
+#env = __GL_VRR_ALLOWED,0
 # use legacy DRM interface instead of atomic mode setting. Might fix flickering issues
-env = WLR_DRM_NO_ATOMIC,1
+env = WLR_DRM_NO_ATOMIC,0
 
 env = __VK_LAYER_NV_optimus,NVIDIA_only
 env = NVD_BACKEND,direct
@@ -42,3 +42,5 @@ env = XDG_SCREENSHOTS_DIR, ~/Obrázky/Snímky\ obrazovky/
 # Authentication and keyring
 env = GNOME_KEYRING_CONTROL, /run/user/1000/keyring
 env = SSH_AUTH_SOCK, /run/user/1000/keyring/ssh
+
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
