--- a/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
@@ -13,6 +13,9 @@ bind = $mainMod, G, togglegroup
 # Open terminal
 bind = $mainMod, return, exec, kgx
 
+# Open nautilus
+bind = $mainMod, N, exec, nautilus --new-window
+
 # Show launchers
 bind = $mainMod, R, exec, wofi --show drun
 bind = ALT, space, exec, albert toggle
