--- a/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
@@ -4,10 +4,6 @@
 windowrulev2 = move 40.7% 30%, class:(albert) # Position
 windowrulev2 = stayfocused, class:(albert) # Focus
 
-# JetBrains fix
-windowrulev2 = float, class:^(jetbrains-.*), title:^(win.*)
-windowrulev2 = noinitialfocus, class:^(jetbrains-.*)
-
 # Floating windows
 windowrulev2 = float, class:(Electron)
 windowrulev2 = float, class:(telegram)
@@ -15,3 +11,15 @@ windowrulev2 = float, class:(org.gnome.Calendar)
 
 # Pinned windows
 windowrulev2 = pin, class:(telegram)
+
+# -- Fix odd behaviors in IntelliJ IDEs --
+#! Fix splash screen showing in weird places and prevent annoying focus takeovers
+windowrulev2 = center,class:^(jetbrains-.*)$,title:^(splash)$,floating:1
+windowrulev2 = nofocus,class:^(jetbrains-.*)$,title:^(splash)$,floating:1
+windowrulev2 = noborder,class:^(jetbrains-.*)$,title:^(splash)$,floating:1
+#! Center popups/find windows
+windowrulev2 = center,class:^(jetbrains-.*)$,title:^( )$,floating:1
+windowrulev2 = stayfocused,class:^(jetbrains-.*)$,title:^( )$,floating:1
+windowrulev2 = noborder,class:^(jetbrains-.*)$,title:^( )$,floating:1
+#! Disable window flicker when autocomplete or tooltips appear
+windowrulev2 = nofocus,class:^(jetbrains-.*)$,title:^(win.*)$,floating:1
