Add Alacritty config, change shells to bash

--- a/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
@@ -11,7 +11,7 @@ bind = $mainMod, F, fullscreen
 bind = $mainMod, G, togglegroup
 
 # Open terminal
-bind = $mainMod, return, exec, kgx
+bind = $mainMod, return, exec, alacritty
 
 # Open nautilus
 bind = $mainMod, N, exec, nautilus --new-window
