--- a/hyprland/.config/hypr/hyprland.conf.d/08_misc.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/08_misc.conf
@@ -1,5 +1,6 @@
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
 misc {
+    focus_on_activate = 1
     force_default_wallpaper = 2
 }
