Several config improvements and support for second monitor

--- a/hyprland/.config/hypr/hyprland.conf.d/01_monitors.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/01_monitors.conf
@@ -6,3 +6,4 @@
 # In my case I configured my monitor on DisplayPort-3
 # to have resolution 3440x1440 and 165 FPS.
 monitor = DP-3, 3440x1440@165, 0x0, 1
+monitor = DP-2, 1920x1080@75, 3440x-450, 1, transform, 3
