--- a/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/11_windows.conf
@@ -1,8 +1,13 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 # Specific tweaks for Albert launcher.
-windowrulev2 = move 40.7% 30%, class:(albert) # Position
-windowrulev2 = stayfocused, class:(albert) # Focus
+windowrulev2 = move 40.7% 30%, title:(^Albert$) # Position
+windowrulev2 = stayfocused, title:(^Albert$) # Focus
+windowrulev2 = float, title:(^Settings — Albert$) # Floating settings
+
+# Specific tweaks for Gitify
+windowrulev2 = stayfocused, class:(^gitify$) # Focus
+windowrulev2 = move 80% 5%, class:(^gitify$) # Focus
 
 # Floating windows
 windowrulev2 = float, class:(Electron)
