Add `dpms off` to turn-off monitors

--- a/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
@@ -20,6 +20,9 @@ bind = $mainMod, N, exec, nautilus --new-window
 bind = $mainMod, R, exec, wofi --show drun
 bind = ALT, space, exec, albert toggle
 
+# Turn-off monitors
+bind = $mainMod, L, exec, sleep 1 && hyprctl --instance 0 dispatch dpms off
+
 # Take screenshot
 bind = $mainMod SHIFT, S, exec, grimblast copysave area
 bind = ALT, PRINT, exec, grimblast copysave active
