Smart split only with mouse

--- a/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/10_bindings.conf
@@ -81,6 +81,10 @@ bind = $mainMod, mouse_up, workspace, e+1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Enable smart_split when positioning window with mouse
+bind = $mainMod, mouse:272, exec, hyprctl keyword dwindle:smart_split 1
+bindr = $mainMod, mouse:272, exec, hyprctl keyword dwindle:smart_split 0
+
 # Volume and audio controls
 bind = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bind = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
