--- a/hyprland/.config/hypr/hyprland.conf.d/03_decoration.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/03_decoration.conf
@@ -3,11 +3,9 @@
 decoration {
     rounding = 10
     inactive_opacity = 0.9
-    drop_shadow = 1
-    shadow_range = 10
-    col.shadow = rgba(1a1a1aee)
 
-    blur {
-        #size = 5
+    shadow {
+        range = 10
+        color = rgba(1a1a1aee)
     }
 }
