--- a/hyprland/.config/hypr/hyprland.conf.d/07_layout.conf
+++ b/hyprland/.config/hypr/hyprland.conf.d/07_layout.conf
@@ -1,10 +1,8 @@
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = 1 # master switch for pseudotiling.
-    smart_split = 1
+    preserve_split = 1
     force_split = 2
-    use_active_for_splits = 0
-    #no_gaps_when_only = 1
 }
 
 master {
